# Branch-and-bound

./: .gitignore  CMakeLists.txt  README.md
doc/: parser_report.md  report.md  单纯形法分析.md
doc/tex/: bibtex.bib  report.aux  report.bbl  report.blg  report.fdb_latexmk  report.fls  report.out  report.tex  report.toc
doc/tex/contents/: BB.tex  Declaration_Signatures.tex  analysis.tex  appendices.tex  authors_info.tex  conclusion.tex  description.tex  implementation.tex  introduction.tex  parse.tex  simplex.tex  source_code.tex  tableofcontents.tex  test_result.tex
release/: README.md
release/solution/: case3.txt  case4.txt  sample1.txt
release/src/: main.cpp  test.py
release/test_case/: bland.txt  sample1.lp  sample1_sol.txt  sample3.txt  sample3_sol.txt  sample4.txt  sample5.lp  sample6.txt
solution/: case5.txt  sample2.txt  sample4.txt  sample5.txt  sample7.txt  toy_case1.txt  toy_case3.txt
src/: Source1.cpp  parse  parse.cpp  simplex.py  simplex_.py  test.py  test.spec  tmp.txt
src/Common/: SimplexSolver.cpp  lpreader.h  main.cpp  simplex  sparse.h
src/SimplexSolver/: SimplexSolver.cpp  SimplexSolver.h  exception.cpp  exception.h  main.cpp
test_case/: bland.lp  bland.txt  bland_sol.txt  case1.txt  case2.lp  case2.txt  case3.txt  case4.lp  case4.txt  sample1.lp  sample1.txt  sample2.lp  sample2.txt  sample2_sol.txt  sample3.lp  sample4.txt  sample4_sol.txt  sample5.txt  sample6.lp  test.lp  test.txt  test_sol.txt
test_case/from_web_site/: 3.txt  4.txt  5.txt  case1.lp  case2.lp  case3.lp  case3.txt  case4.lp  case4.txt  case5.lp  case5.txt
(+26 files in other folders)
